# geostructures

./: .coveragerc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  pr_quality_check.yml  publish.yml  publish_test.yml  unit-tests.yml  unit_tests.yml
geostructures/: __init__.py  _base.py  _const.py  _geometry.py  _types.py  _version.py  calc.py  collections.py  conversion.py  coordinates.py  distance.py  geodesic.py  geohash.py  multistructures.py  parsers.py  serializers.py  structures.py  time.py  timecube.py  typing.py  wkt.py
geostructures.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
geostructures/utils/: agg_functions.py  conditional_imports.py  functions.py  logging.py  mixins.py
geostructures/visualization/: plotly.py
notebooks/: Coordinates and Shapes.ipynb  Shape Collections.ipynb  plotlytest.ipynb
tests/: __init__.py  conftest.py  functions.py  test_base.py  test_calc.py  test_collections.py  test_compile.py  test_conversion.py  test_coordinates.py  test_distance.py  test_geodesic.py  test_geohash.py  test_geometry.py  test_geostructures.py  test_multistructures.py  test_parsers.py  test_serializers.py  test_structures.py  test_time.py  test_track.py  test_typing.py  test_version.py
tests/base/: test_baseshape.py  test_multishapebase.py  test_shape_mixins.py
tests/multistructures/: test_multigeolinestring.py  test_multigeopoint.py  test_multigeopolygon.py
tests/structures/: test_geobox.py  test_geocircle.py  test_geoellipse.py  test_geolinestring.py  test_geopoint.py  test_geopolygon.py  test_georing.py
tests/test_files/: test_mixed_extendeddata.kml
tests/utils/: test_conditional_imports.py  test_functions.py  test_logging.py  test_mixins.py
