[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=61.2",
]

[project]
authors = [
    { name = "Carl Best" },
]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy>=2,<3",
    "pydantic>=2,<3",
]
description = "A lightweight implementation of shapes drawn across a geo-temporal plane."
dynamic = [
    "version",
]
name = "geostructures"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "coverage>=5.5",
    "flake8",
    "geostructures[df,h3,kml,mgrs,proj,shapely,shapefile]",
    "mypy",
    "pylint",
    "pytest",
]
df = [
    "geopandas>=1,<2",
    "pandas>=2,<3",
]
h3 = [
    "h3>=4.1,<5",
]
kml = [
    "fastkml>=1,<2",
]
mgrs = [
    "mgrs>=1.4.5,<2",
]
proj = [
    "pyproj>=3.6,<4",
]
shapefile = [
    "pyshp>=2.3.1,<3",
]
shapely = [
    "shapely>=2.0.7",
]

[project.readme]
content-type = "text/markdown"
file = "README.md"

[project.urls]
Homepage = "https://github.com/ccbest/geostructures"

[tool.setuptools]
include-package-data = false

[tool.setuptools.dynamic.version]
attr = "geostructures._version.__version__"

[tool.setuptools.package-data]
geostructures = [
    "py.typed",
]

[tool.setuptools.packages.find]
exclude = [
    "*tests",
]
include = [
    "geostructures*",
]
namespaces = false
