[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.2"]

[project]
authors = [{ name = "Carl Best" }]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = ["numpy>=2,<3", "pydantic>=2,<3"]
description = "A lightweight implementation of shapes drawn across a geo-temporal plane."
dynamic = ["version"]
name = "geostructures"
requires-python = ">=3.9"

[project.optional-dependencies]
all = [
    "fastkml>=1,<2",
    "geopandas>=1,<2",
    "geographiclib>=2.1",
    "h3>=4.1,<5",
    "mgrs>=1.4.5,<2",
    "pyproj>=3.6,<4",
    "pyshp>=2.3.1,<3",
    "shapely>=2.0.7,<3",
]
dev = [
    # Optional dependencies
    "fastkml>=1,<2",
    "geopandas>=1,<2",
    "geographiclib>=2.1",
    "h3>=4.1,<5",
    "mgrs>=1.4.5,<2",
    "pyproj>=3.6,<4",
    "pyshp>=2.3.1,<3",
    "shapely>=2.0.7,<3",

    # Development requirements
    "coverage>=5.5",
    "flake8",
    "mypy",
    "pylint>=2.15,<3",
    "pytest",
    "pandas-stubs",
    "types-geopandas",
    "types-shapely",
]
df = ["geopandas>=1,<2", "pandas>=2,<3"]
h3 = ["h3>=4.1,<5"]
kml = ["fastkml>=1,<2"]
mgrs = ["mgrs>=1.4.5,<2"]
proj = ["pyproj>=3.6,<4"]
shapefile = ["pyshp>=2.3.1,<3"]
shapely = ["shapely>=2.0.7"]

[project.readme]
content-type = "text/markdown"
file = "README.md"

[project.urls]
Homepage = "https://github.com/ccbest/geostructures"
Issues = "https://github.com/ccbest/geostructures/issues"
Source = "https://github.com/ccbest/geostructures"

[project.license]
file = "LICENSE"

[tool.mypy]
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.package-data]
geostructures = ["py.typed"]

[tool.setuptools.packages.find]
exclude = ["*tests", "tests*"]
include = ["geostructures*"]
namespaces = false
