[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.2"]

[project]
authors = [{ name = "Carl Best" }]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = ["numpy>=2,<3", "pydantic>=2,<3"]
description = "A lightweight implementation of shapes drawn across a geo-temporal plane."
dynamic = ["version"]
name = "geostructures"
requires-python = ">=3.9"

[project.optional-dependencies]
all = [
    "fastkml>=1,<2",
    "geographiclib>=1.2,<2",
    "geopandas>=1,<2",
    "h3>=4.1,<5",
    "mgrs>=1.4.5,<2",
    "pyproj>=3.6,<4",
    "pyshp>=2.3.1,<3",
    "shapely>=2.0.7,<3",
]
dev = [
    # Optional dependencies
    "fastkml>=1,<2",
    "geographiclib>=1.2,<2",
    "geopandas>=1,<2",
    "h3>=4.1,<5",
    "mgrs>=1.4.5,<2",
    "pyproj>=3.6,<4",
    "pyshp>=2.3.1,<3",
    "shapely>=2.0.7,<3",

    # Development requirements
    "coverage>=5.5",
    "mypy",
    "pylint>=3,<4",
    "pytest",
    "ruff>=0.8",
    "pandas-stubs",
    "types-geopandas",
    "types-shapely",
]
df = ["geopandas>=1,<2", "pandas>=2,<3"]
karney = ["geographiclib>=1.2,<2",]
h3 = ["h3>=4.1,<5"]
kml = ["fastkml>=1,<2"]
mgrs = ["mgrs>=1.4.5,<2"]
proj = ["pyproj>=3.6,<4"]
shapefile = ["pyshp>=2.3.1,<3"]
shapely = ["shapely>=2.0.7"]

[project.readme]
content-type = "text/markdown"
file = "README.md"

[project.urls]
Homepage = "https://github.com/ccbest/geostructures"
Issues = "https://github.com/ccbest/geostructures/issues"
Source = "https://github.com/ccbest/geostructures"

[project.license]
file = "LICENSE"

[tool.mypy]
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.pylint.main]
py-version = "3.9"

[tool.pylint.format]
max-line-length = 120

[tool.pylint."messages control"]
disable = [
    # Naming: math-heavy code legitimately uses short names
    "invalid-name",
    # Docstring presence is enforced by review, not lint
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    # Function-local imports are this library's deliberate optional-dependency pattern
    "import-outside-toplevel",
    # Structural findings tracked as tech debt rather than lint failures
    "cyclic-import",
    "duplicate-code",
    "protected-access",
    # Design-counter limits don't fit a shapes API with many small methods
    "too-many-public-methods",
    "too-many-branches",
    "too-many-arguments",
    "too-many-locals",
    "too-many-statements",
    "too-many-positional-arguments",
    # Misc
    "fixme",
    "unused-argument",
    "redefined-outer-name",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.package-data]
geostructures = ["py.typed"]

[tool.setuptools.packages.find]
exclude = ["*tests", "tests*"]
include = ["geostructures*"]
namespaces = false
